--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<h3><i class="fas fa-book-reader"></i> StoryBooks</h3>
+<h3><i class="fas fa-book-reader"></i> DevChronicles</h3>
 <div class="section">
-    <p class='lead'>Create public and private stories from your life</p>
+    <p class='lead'>Create public and private chronicles from your life as a new software developer</p>
 </div>
 <div class="divider"></div>
 <div class="section">
