finished add story functionality

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,7 +12,7 @@
             </tr>
         </thead>
         <tbody>
-            {{#each stories}}
+            {{#each chronicles}}
                 <tr>
                     <td><a href="/stories/{{_id}}"></a>{{title}}</td>
                     <td>{{createdAt}}</td>
