edit story functionality created

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,7 +14,7 @@
         <tbody>
             {{#each chronicles}}
                 <tr>
-                    <td><a href="/stories/{{_id}}"></a>{{title}}</td>
+                    <td><a href="/chronicles/{{_id}}">{{title}}</a></td>
                     <td>{{formatDate createdAt 'MMMM Do YYYY, h:mm:ss a'}}</td>
                     <td><span class="dash-status">{{status}}</span></td>
                     <td></td>
