finished user feature

--- a/views/chronicles/show.handlebars
+++ b/views/chronicles/show.handlebars
@@ -17,7 +17,7 @@
                 <img src="{{chronicle.user.image}}" class="circle responsive-img img-small">
             </div>
             <div class="card-action">
-                <a href="/stories/user/{{chronicle.user._id}}">More From {{chronicle.user.firstName}}</a>
+                <a href="/chronicles/user/{{chronicle.user._id}}">More From {{chronicle.user.firstName}}</a>
             </div>
         </div>
     </div>
